--- a/_includes/prices.html
+++ b/_includes/prices.html
@@ -4,7 +4,7 @@
         <div class="wo-plan wo-plan-{{ include.class }}">
             <h3>{{ include.title }}</h3>
             <p>${{ include.price }}</p>
-            <button class="btn btn-primary" type="button" value="Input">Buy this plan</button>
+            <button class="wo-btn btn btn-primary" type="button" value="Input">Buy this plan</button>
         </div>
 
 
