actualizo color icono fb

--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -184,10 +184,9 @@ p{
   p{
     color: $white-color;
   }
-  .icon-background-rounded{
-    background: $white-color;
+  .icon{
     span:before {
-      color: $main-color;
+      color: $white-color;
     }
   }
 
