actualizo color icono fb

--- a/_includes/prices.html
+++ b/_includes/prices.html
@@ -1,4 +1,4 @@
-<div class="col col-lg-4 col-md-4 col-sm-12 ">
+<div class="col col-lg-4 col-md-4 col-12 ">
 
     <div class="wo-center">
         <div class="wo-plan wo-plan-{{ include.class }}">
