--- a/_includes/overlay-effect.html
+++ b/_includes/overlay-effect.html
@@ -1,4 +1,4 @@
-<div class="col col-lg-3 col-md-3 col-sm-6 wo-nopadding-col wo-overlay-effect">
+<div class="col col-lg-3 col-md-3 col-6 wo-nopadding-col wo-overlay-effect">
 <img class="img-fluid" src="{{ include.image }}">
 
 <div class="caption wo-center" href="#">
