--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -133,7 +133,7 @@
         <div class="container">
             <div class="row">
                 {% include prices.html title="BASIC" price="25$/ Month" %}
-                {% include prices.html title="STANDARD" price="35$/ Month" class="" %}
+                {% include prices.html title="STANDARD" price="35$/ Month" class="blue" %}
                 {% include prices.html title="PROFESSIONAL" price="45$/ Month" %}
             </div>
         </div>
