--- a/style.css
+++ b/style.css
@@ -2557,6 +2557,8 @@ p {
   padding: 1rem; }
 .wo-prices .wo-plan-blue {
   background: #3ec6ff; }
+  .wo-prices .wo-plan-blue h2, .wo-prices .wo-plan-blue p {
+    color: #FFFFFF; }
   .wo-prices .wo-plan-blue .btn-primary {
     background: #FFFFFF; }
 .wo-prices .list-group-item {
