--- a/_includes/prices.html
+++ b/_includes/prices.html
@@ -1,6 +1,6 @@
 <div class="col col-lg-4 col-md-4 col-12 ">
 
-    <div class="wo-center">
+    <div class="wo-prices-item wo-center">
         <div class="wo-plan wo-plan-{{ include.class }}">
             <h2>{{ include.title }}</h2>
             <p>${{ include.price }}</p>
