--- a/style.css
+++ b/style.css
@@ -2555,6 +2555,8 @@ p {
       .wo-overlay-effect .caption .wo-caption-text h3, .wo-overlay-effect .caption .wo-caption-text p {
         color: #FFFFFF; }
 
+.wo-prices .wo-prices-item {
+  padding: 0 2rem; }
 .wo-prices .btn {
   width: 100%; }
 .wo-prices .wo-plan {
