--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -88,6 +88,7 @@ p{
     .nav-link{
       color: $dark-color;
       font-size:$rem*0.9;
+      padding: 0 1.2rem;
     }
 
   }
@@ -282,6 +283,7 @@ p{
 .wo-section-map-form{
   position:relative;
   .wo-form-contact{
+    backgroud: $dark-color;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -289,6 +291,9 @@ p{
     width: 50%;
     margin: -8% 0 0 -25%;
     text-align:left;
+    .form-control{
+      margin:0.5rem 0;
+    }
   }
 }
 
