--- a/style.css
+++ b/style.css
@@ -2443,7 +2443,8 @@ p {
   justify-content: flex-end; }
 .navbar .nav-item .nav-link {
   color: #212529;
-  font-size: 0.9rem; }
+  font-size: 0.9rem;
+  padding: 0 1.2rem; }
 
 .wo-btn {
   border: 0;
@@ -2508,7 +2509,7 @@ p {
 
 .wo-section-back2 {
   background: url("img/slide2.jpg") fixed center center;
-  height: 300px; }
+  height: 450px; }
   .wo-section-back2 p {
     color: #FFFFFF; }
   .wo-section-back2 .icon span:before {
@@ -2577,6 +2578,7 @@ p {
 .wo-section-map-form {
   position: relative; }
   .wo-section-map-form .wo-form-contact {
+    backgroud: #212529;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -2584,5 +2586,7 @@ p {
     width: 50%;
     margin: -8% 0 0 -25%;
     text-align: left; }
+    .wo-section-map-form .wo-form-contact .form-control {
+      margin: 0.5rem 0; }
 
 /*# sourceMappingURL=style.css.map */
