--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -283,7 +283,7 @@ p{
 .wo-section-map-form{
   position:relative;
   .wo-form-contact{
-    backgroud: $dark-color;
+    background: $dark-color;
     position: absolute;
     top: 50%;
     left: 50%;
