--- a/style.css
+++ b/style.css
@@ -2578,7 +2578,7 @@ p {
 .wo-section-map-form {
   position: relative; }
   .wo-section-map-form .wo-form-contact {
-    backgroud: #212529;
+    background: #212529;
     position: absolute;
     top: 50%;
     left: 50%;
