--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -287,12 +287,12 @@ p{
     position: absolute;
     top: 50%;
     left: 50%;
-    height: 30%;
-    width: 50%;
-    margin: -8% 0 0 -25%;
-    text-align:left;
+    width: 40%;
+    margin: -8% 0 0 -20%;
+    text-align: left;
+    padding: 3rem 7rem;
     .form-control{
-      margin:0.5rem 0;
+      margin: $rem 0;
     }
   }
 }
