--- a/style.css
+++ b/style.css
@@ -2582,11 +2582,11 @@ p {
     position: absolute;
     top: 50%;
     left: 50%;
-    height: 30%;
-    width: 50%;
-    margin: -8% 0 0 -25%;
-    text-align: left; }
+    width: 40%;
+    margin: -8% 0 0 -20%;
+    text-align: left;
+    padding: 3rem 7rem; }
     .wo-section-map-form .wo-form-contact .form-control {
-      margin: 0.5rem 0; }
+      margin: 1rem 0; }
 
 /*# sourceMappingURL=style.css.map */
