actualizo form mapa

--- a/_includes/form-contact.html
+++ b/_includes/form-contact.html
@@ -1,4 +1,9 @@
 <form>
+    <adress>
+        <h3>Contact us</h3>
+        <p>Loren ipsum<br>
+            Dolor sit amet</p>
+    </adress>
 
         <input class="form-control" placeholder="E-mail" >
 
