--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -283,11 +283,15 @@ p{
 .wo-section-map-form{
   position:relative;
   .wo-form-contact{
-    background: lighten($dark-color,20%);
+    background: lighten($dark-color,40%);
     position: absolute;
     top: 50%;
     left: 50%;
     width: 40%;
+    @media #{$smartphones} {
+      position:static;
+      width:100%;
+  }
     margin: -8% 0 0 -20%;
     text-align: left;
     padding: 3rem 7rem;
