actualizo form mapa

--- a/_includes/form-contact.html
+++ b/_includes/form-contact.html
@@ -1,9 +1,9 @@
 <form>
-    <adress>
+    <address>
         <h3>Contact us</h3>
         <p>Loren ipsum<br>
             Dolor sit amet</p>
-    </adress>
+    </address>
 
         <input class="form-control" placeholder="E-mail" >
 
