actualizo form mapa

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -129,7 +129,7 @@
         </div>
     </section>
 
-    <section class="wo-prices wo-height-big">
+    <section class="wo-prices wo-height-big wo-center">
         <div class="container">
             <div class="row">
                 {% include prices.html title="BASIC" price="25$/ Month" %}
