actualizo form mapa

--- a/_includes/form-contact.html
+++ b/_includes/form-contact.html
@@ -1,5 +1,5 @@
 <form>
-    <address>
+    <address class="wo-center">
         <h3>Contact us</h3>
         <p>Loren ipsum<br>
             Dolor sit amet</p>
