--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -129,7 +129,7 @@
         </div>
     </section>
 
-    <section class="wo-prices wo-height-big wo-center">
+    <section class="wo-prices wo-height-big">
         <div class="container">
             <div class="row">
                 {% include prices.html title="BASIC" price="25$/ Month" %}
@@ -139,7 +139,7 @@
         </div>
     </section>
    <section class="wo-section-map-form">
-       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193595.15830926684!2d-74.1197636697327!3d40.69766374854729!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNueva+York%2C+EE.+UU.!5e0!3m2!1ses!2ses!4v1516392534460" width="100%" height="550" frameborder="0" style="border:0" allowfullscreen></iframe>
+       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193595.15830926684!2d-74.1197636697327!3d40.69766374854729!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNueva+York%2C+EE.+UU.!5e0!3m2!1ses!2ses!4v1516392534460" width="100%" height="650" frameborder="0" style="border:0" allowfullscreen></iframe>
        <div class="wo-form-contact">
            {% include form-contact.html %}
        </div>
