--- a/style.css
+++ b/style.css
@@ -2592,12 +2592,14 @@ p {
       .wo-section-map-form .wo-form-contact {
         position: static;
         width: 100%;
-        margin: 0 auto; } }
+        margin: 0 auto;
+        padding: 1rem; } }
     @media only screen and (max-width: 780px) {
       .wo-section-map-form .wo-form-contact {
         position: static;
         width: 100%;
-        margin: 0 auto; } }
+        margin: 0 auto;
+        padding: 2rem; } }
     .wo-section-map-form .wo-form-contact .form-control {
       margin: 1rem 0; }
     .wo-section-map-form .wo-form-contact .wo-btn {
