--- a/style.css
+++ b/style.css
@@ -2495,6 +2495,12 @@ p {
     .slider .item .caption h1, .slider .item .caption h4 {
       color: #FFFFFF;
       letter-spacing: 0.4rem; }
+    @media smartphones {
+      .slider .item .caption h1 {
+        font-size: 2.2rem; } }
+    @media smartphones {
+      .slider .item .caption h4 {
+        font-size: 0.9rem; } }
 
 .wo-section-back {
   background: url("img/slide3.jpg") fixed center center;
