--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,8 +32,8 @@
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" placeholder="Search">
-                    <i class="icon icon-search"> <span class="icon-magnifying-glass"></span></i>
+                    <input class="form-control invisible mr-sm-2" placeholder="Search">
+                   <button class="wo-btn-search" href=""><i class="icon icon-search"> <span class="icon-magnifying-glass"></span></i></button>
                 </form>
 
 
