--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
                     <input class="form-control invisible mr-sm-2" placeholder="Search">
-                   <button class="wo-btn-search" href=""><i class="icon icon-search"> <span class="icon-magnifying-glass"></span></i></button>
+                   <a class="wo-btn-search" href=""><i class="icon icon-search"> <span class="icon-magnifying-glass"></span></i></a>
                 </form>
 
 
