--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -68,6 +68,13 @@ p{
   font-size: 3rem;
 }
 
+/* Esto lo uso para el buscador */
+  .visible {
+    visibility: visible;
+  }
+  .invisible {
+    visibility: hidden;
+  }
 
 
 /*Menú*/
