--- a/style.css
+++ b/style.css
@@ -2499,15 +2499,22 @@ p {
     width: 50%;
     margin: -8% 0 0 -25%;
     text-align: center; }
+    @media only screen and (max-width: 479px) {
+      .slider .item .caption {
+        left: 30%;
+        height: 30%;
+        width: 90%; } }
     .slider .item .caption h1, .slider .item .caption h4 {
       color: #FFFFFF;
       letter-spacing: 0.4rem; }
     @media only screen and (max-width: 479px) {
       .slider .item .caption h1 {
-        font-size: 2.2rem; } }
+        font-size: 2.2rem;
+        letter-spacing: 0.1rem; } }
     @media only screen and (max-width: 479px) {
       .slider .item .caption h4 {
-        font-size: 0.9rem; } }
+        font-size: 0.9rem;
+        letter-spacing: 0.4rem; } }
 
 .wo-section-back {
   background: url("img/slide3.jpg") fixed center center;
