--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -186,7 +186,7 @@
         })
 
         $('.wo-btn-search').click(function() {
-            $(this).removeClass('input-search-invisible');
+            $('.wo-btn-search').removeClass('input-search-invisible');
         });
 
 
