--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -160,9 +160,15 @@
 
 
 <script>
-
+    /*
+    $( ".wo-btn-search" ).click(function() {
+        $( ".wo-input-search" ).toggle( "slow", function() {
+            // Animation complete.
+        });
+    });
+    */
     $('.wo-btn-search').hover(function() {
-        $('.wo-btn-search').removeClass('input-search-invisible');
+        $('.wo-input-search').removeClass('input-search-invisible');
     });
     $(document).ready(function() {
         $('#owl-slider').owlCarousel({
