--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -167,7 +167,7 @@
         });
     });
     */
-    $('.wo-btn-search').hover(function() {
+    $('.wo-btn-search').click(function() {
         $('.wo-input-search').removeClass('input-search-invisible');
     });
     $(document).ready(function() {
