--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -161,16 +161,12 @@
 
 <script>
 
-    $( ".wo-btn-search" ).click(function() {
-        $( ".wo-input-search" ).toggle( "slow", function() {
-            // Animation complete.
-        });
-    });
-    /*
-    $('.wo-btn-search').click(function() {
+
+
+    $('.wo-btn-search').hover(function() {
         $('.wo-input-search').removeClass('input-search-invisible');
     });
-    */
+
     $(document).ready(function() {
         $('#owl-slider').owlCarousel({
             items: 1,
