--- a/style.css
+++ b/style.css
@@ -2446,18 +2446,19 @@ p {
   font-size: 0.9rem;
   padding: 0 1.2rem; }
 .navbar .wo-input-search {
+  width: auto;
   padding: 1px;
   margin-right: 5px;
   border-radius: 1px;
-  transition: width .25s linear;
-  -webkit-transition: width .25s linear;
-  -moz-transition: width .25s linear; }
+  transition: width .50s linear;
+  -webkit-transition: width .50s linear;
+  -moz-transition: width .50s linear; }
 .navbar .input-search-invisible {
   visibility: hidden;
   width: 0;
-  transition: width .25s linear;
-  -webkit-transition: width .25s linear;
-  -moz-transition: width .25s linear; }
+  transition: width .50s linear;
+  -webkit-transition: width .50s linear;
+  -moz-transition: width .50s linear; }
 
 .wo-btn {
   border: 0;
