--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -152,7 +152,7 @@
 <div class="footer">
     <div class="container">
         <footer class="footer">
-            <p>Made width love by Toya Llorca</p>
+            <p>Lorem ipsum dolor sit amet. <a>999 123 456</a></p>
         </footer>
     </div>
 </div>
