--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -97,16 +97,16 @@ p{
     padding: 1px;
     margin-right: 5px;
     border-radius: 1px;
-    transition: width .50s linear;
-    -webkit-transition: width .50s linear;
-    -moz-transition: width .50s linear;
+    transition: width 2s linear;
+    -webkit-transition: width 2s linear;
+    -moz-transition: width 2s linear;
   }
   .input-search-invisible{
     visibility: hidden;
     width:0;
-    transition: width .50s linear;
-    -webkit-transition: width .50s linear;
-    -moz-transition: width .50s linear;
+    transition: width 2s linear;
+    -webkit-transition: width 2s linear;
+    -moz-transition: width 2s linear;
   }
 
 }
