--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -50,11 +50,11 @@ p{
 /*Alturas, márgenes*/
 
 .wo-height-med{
-  padding: 40px 0;
+  padding: 4rem 0;
 }
 
 .wo-height-big{
-  padding: 80px 0;
+  padding: 8rem 0;
 }
 
 .wo-nopadding-col{
