--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -172,13 +172,12 @@
             items: 1,
             loop:true,
             margin:10,
-            nav:true
+            navElement:true
 
         });
         $('#owl-carousel').owlCarousel({
             loop:true,
             margin:10,
-            nav:true,
             responsive:{
                 0:{
                     items:1
