--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -172,12 +172,13 @@
             items: 1,
             loop:true,
             margin:10,
-            navElement:true
+            nav:true
 
         });
         $('#owl-carousel').owlCarousel({
             loop:true,
             margin:10,
+            nav:true,
             responsive:{
                 0:{
                     items:1
