--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -171,14 +171,14 @@
         $('#owl-slider').owlCarousel({
             items: 1,
             loop:true,
+            dots: false,
             margin:10,
-            nav:true
+            navElement: true
 
         });
         $('#owl-carousel').owlCarousel({
             loop:true,
             margin:10,
-            nav:true,
             responsive:{
                 0:{
                     items:1
