--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -173,7 +173,7 @@
             loop:true,
             dots: false,
             margin:10,
-            navElement: true
+            nav:true
 
         });
         $('#owl-carousel').owlCarousel({
