--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -349,3 +349,23 @@ p{
   }
 }
 
+
+
+.owl-carousel{
+  .owl-carrusel {
+    posición: relativo;
+  }
+  .owl-prev,
+  .owl-next {
+    position: absolute;
+    top: 50%;
+    margin-top: -10px;
+  }
+  .owl-prev {
+    left: 0;
+  }
+  .owl-next {
+    right: 0;
+  }
+
+}
