--- a/style.css
+++ b/style.css
@@ -2421,10 +2421,12 @@ p {
 
 /*Alturas, márgenes*/
 .wo-height-med {
-  padding: 4rem 0; }
+  padding-top: 4rem;
+  padding-bottom: 4rem; }
 
 .wo-height-big {
-  padding: 8rem 0; }
+  padding-top: 8rem;
+  padding-bottom: 8rem; }
 
 .wo-nopadding-col {
   padding: 0; }
