--- a/style.scss
+++ b/style.scss
@@ -4,6 +4,8 @@
 /*Aquí los css de componentes descargados*/
 @import "scss/component/owl.carousel.min.css";
 @import "scss/component/owl.theme.default.min.css";
+@import "scss/component/iconmoon.css";
+
 
 /*Éstos son mis estilos*/
 @import "scss/layout/commons.scss";
