--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,12 +15,22 @@
             <!--Fin para el responsive-->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">HOme</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">HOme</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">HOme</a>
+                    </li>
+                    <!--
                     {% include nav-item.html item="Home"%}
                     {% include nav-item.html item="Portfolio"%}
                     {% include nav-item.html item="Blog"%}
                     {% include nav-item.html item="Services"%}
                     {% include nav-item.html item="Contact"%}
-
+-->
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
                     <input class="wo-input-search form-control input-search-invisible mr-sm-2" placeholder="Search">
