--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,31 +6,58 @@
 
 <header>
     <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light">
-            {% include logo.html %}
-            <!--Botón para el menú responvise-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <!--Fin para el responsive-->
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Dropdown
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Action</a>
+                            <a class="dropdown-item" href="#">Another action</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#">Disabled</a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+            </div>
+        </nav>
+        <!--
+        <nav class="navbar navbar-expand-lg navbar-light">
+            {% include logo.html %}
+            <!--Botón para el menú responvise-->   <!--
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!--Fin para el responsive-->   <!--
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">HOme</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">HOme</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">HOme</a>
-                    </li>
-                    <!--
-                    {% include nav-item.html item="Home"%}
-                    {% include nav-item.html item="Portfolio"%}
-                    {% include nav-item.html item="Blog"%}
-                    {% include nav-item.html item="Services"%}
-                    {% include nav-item.html item="Contact"%}
--->
+
+                    {% include nav-item.html item="Home" %}
+                    {% include nav-item.html item="Portfolio" %}
+                    {% include nav-item.html item="Blog" %}
+                    {% include nav-item.html item="Services" %}
+                    {% include nav-item.html item="Contact" %}
+
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
                     <input class="wo-input-search form-control input-search-invisible mr-sm-2" placeholder="Search">
@@ -40,6 +67,7 @@
 
             </div>
         </nav>
+        -->
     </div>
 </header>
 
