--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -241,6 +241,8 @@ p{
        width: 68%;
         @media #{$smartphones} {
         width: 100%;
+          margin-bottom: $rem*0.8;
+          margin-right:0
      }
       }
     .btn {
