--- a/style.css
+++ b/style.css
@@ -2554,7 +2554,9 @@ p {
   width: 68%; }
   @media only screen and (max-width: 479px) {
     .wo-form .wo-form-inline .form-control {
-      width: 100%; } }
+      width: 100%;
+      margin-bottom: 0.8rem;
+      margin-right: 0; } }
 .wo-form .wo-form-inline .btn {
   width: 28%; }
   @media only screen and (max-width: 479px) {
