--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -203,6 +203,15 @@ p{
       }
     }
   }
+  .owl-nav [class*=owl-] {
+    background: none;
+  }
+  .owl-next, .owl-right{
+    span{
+      font-size: 4rem;
+    }
+  }
+
 }
 
 
