--- a/scss/layout/commons.scss
+++ b/scss/layout/commons.scss
@@ -206,7 +206,7 @@ p{
   .owl-nav [class*=owl-] {
     background: none;
   }
-  .owl-next, .owl-right{
+  .owl-next, .owl-prev{
     span{
       font-size: 4rem;
     }
